# mcp-server-clash-verge

./: .env.example  .gitignore  README.md  README_ZH.md  SETUP.md  pyproject.toml
src/mcp_server_clash_verge/: __main__.py  client.py  server.py
