[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-clash-verge"
version = "0.1.3"
description = "MCP server for Clash Verge (Mihomo) — control proxy nodes, switch modes, and manage routes from Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Neo" }]
keywords = [
    "mcp",
    "clash",
    "mihomo",
    "proxy",
    "clash-verge",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]

[project.scripts]
mcp-server-clash-verge = "mcp_server_clash_verge:main"

[project.urls]
Repository = "https://github.com/IS5416/mcp-server-clash-verge"
